--- a/SADVO.Presentation/Views/Home/Index.cshtml
+++ b/SADVO.Presentation/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                         <input type="text" 
                                id="documentNumber" 
                                name="documentNumber" 
-                               class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 text-aling text-lg font-medium tracking-wider transition-all duration-200 placeholder-gray-400"
+                               class = "w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-100 text-lg font-medium transition-all duration-200 placeholder-white-400"
 
                                maxlength="13"
                                pattern="[0-9]{3}-[0-9]{7}-[0-9]{1}"
