--- a/SADVO.Presentation/Views/Ciudadanos/desactivar.cshtml
+++ b/SADVO.Presentation/Views/Ciudadanos/desactivar.cshtml
@@ -1,4 +1,4 @@
-@model SADVO.Web.ViewModels.CuidadanoViewModel
+@model SADVO.Application.ViewModels.CiudadanoViewModel
 
 @{
     ViewData["Title"] = "Desactivar Ciudadano";
