--- a/SADVO.Presentation/Views/Dirigente/index.cshtml
+++ b/SADVO.Presentation/Views/Dirigente/index.cshtml
@@ -55,7 +55,7 @@
                             </div>
                         </a>
 
-                        <a href="@Url.Action("Index", "AsignarCandidato")"
+                        <a href="@Url.Action("Index", "CandidatoPuesto")"
                             class="group bg-gradient-to-r from-green-50 to-green-100 hover:from-green-100 hover:to-green-200 rounded-xl p-6 border border-green-200 transition-all duration-200 hover:shadow-lg">
                             <div class="flex flex-col items-center text-center">
                                 <div class="bg-green-500 rounded-lg p-3 mb-4">
